--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://cdn.jsdelivr.net/npm/typeface-inter@3.15.6/inter.css');
 *{
   margin: 0;
   padding: 0;
@@ -7,6 +8,7 @@
 body{
   width: 100vw;
   overflow-x: hidden;
+  font-family: 'Inter', sans-serif;
 }
 a{
    text-decoration: none;
