--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,9 +1,15 @@
-@import url('https://cdn.jsdelivr.net/npm/typeface-inter@3.15.6/inter.css');
+@import url('https://rsms.me/inter/inter.css');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   max-width: 100vw;  
+  font-family: 'Inter', sans-serif;
+}
+* img{
+  max-width: 100%;
+  height: auto;
+
 }
 body{
   width: 100vw;
