--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   max-width: 100vw;  
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
 }
 * img{
   max-width: 100%;
@@ -14,9 +14,12 @@
 body{
   width: 100vw;
   overflow-x: hidden;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter';
 }
 a{
    text-decoration: none;
    color:#fff;
+}
+a, p, h1, h2,h3,h4,h5,h6{
+  font-family: 'Inter';
 }
