--- a/dashboard/src/styles/globals.css
+++ b/dashboard/src/styles/globals.css
@@ -1,9 +1,9 @@
-@import url("https://rsms.me/inter/inter.css");
+@import url('https://rsms.me/inter/inter.css');
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Inter";
+  font-family: 'Inter';
 }
 
 html,
